Summons with heat aura are now prefixed "hot" instead of "infernal" to better distinguish them from the inferno banishment effect.
4 gem in battle spells now have the correct base cast time of 225%.
Path level increase per research for mistform reduced from 0.66 to 0.33.
Wave warriors scale rate increased slightly to make battlefield wide generate at research 8.
All drain life effects now have 50% skipchance.
Skipchance for range 10 and 3 spells 90%, from 70%.

NEW IN v1.1.1

"Unending" chain lightning scaling rate inreased by 50%.
Foulspawn and greater foulspawn rituals made higher research and have higher path requirement, they were previously WAY too strong.
Battlesummoned mages now always cost a gem. This is mainly to prevent recursive issues with summoning spells that can cast a pathboosting spell and then make more copies of themselves.

NEW IN v1.1.0

Cloudify is no longer a valid modifier on self-only spells such as communions
Added new banishments (cloud, special fire explosion and chain lightning)
Added generation UI

From magicgen_testing pack creation to v1.0.0:

touch spell range increased to 3
touch spells now 100 precision for the purposes of AI casting scores (they wouldn't really miss before this change)
touch spells given AI cast mod of +40%
skipchance for all combat summoned mages increased dramatically (was 21-31%, now 70%)
fixed fatigue cost for battlesummon released sage (400 base fatigue to 120)
reduced prices for summoned magus and alchemist (ritualsummons to 15 gems from 25, battle fatigue cost from 80 to 60)
standardised x1 mage battlesummon costs to 60 fatigue each, notably summoning revenants is now more expensive and pyromancers are cheaper
reduced fatigue increase for slow casting spell modifier, given AI cast mod of -50%
increased fatigue reduction for short ranged (10 range) spells
75% casting time effect disabled
50% casting time effect research modifier decreased from +2 to +1, given AI cast mod of +25%