@@ -13,7 +13,7 @@ from spellstructures import utils
 spellstokeep = [150, 167, 166, 165, 168, 169, 189, 190]
 
 START_ID = 1300
-ver = "1.1.1"
+ver = "1.1.2"
 
 ALL_PATH_FLAGS = [utils.PathFlags(2 ** x) for x in range(0, 8)]
 
@@ -33,7 +33,7 @@ def rollspells(**options):
         with open("spells.csv", "r") as f:
             r = csv.DictReader(f, delimiter="\t")
             for line in r:
-                utils.spellnames[line["name"]] = None
+                utils.spellnames.append(line["name"])
 
         modname = options.get("modname", None)
         if modname is None:
