@@ -8,8 +8,9 @@ secondaries = {}
 unitmods = {}
 weaponmods = {}
 
-spellnames = {}
-spellqualifiers = ["Greater ", "Improved ", "Advanced ", "Masterful ", "Perfected ", "Flawless ", "Ultimate "]
+spellnames = []
+spellnamesbyeffect = {}
+spellqualifiers = ["Improved ", "Advanced ", "Masterful ", "Perfected ", "Flawless ", "Ultimate "]
 
 # The IDs to start making STUFF at.
 SPELL_ID = 1310
